fixed alignment in add edit announcement

--- a/orms.client/src/app/common-ui/controls/calendar/calendar.component.css
+++ b/orms.client/src/app/common-ui/controls/calendar/calendar.component.css
@@ -7,6 +7,7 @@
 }
 
 .dob-label {
+  height: 21px !important;
   font-size: 14px;
   font-weight: 500;
   color: #1E293B !important;
